--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
     <title>Today I learned~</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <img src="logo.png" height="68" width="68" alt="Today I Learned Logo" />
       <h1>Today I Learned</h1>
       <button>Share a Fact</button>
     </header>
-
     <form class="fact-form">
       <input type="text" placeholder="Share a fact with the world..." />
       <span>200</span>
@@ -44,8 +43,8 @@
       </aside>
       <section>
         <ul>
-          <li>
-            <p class="fact">
+          <li class="fact">
+            <p>
               React is being developed by Meta (formerly facebook)
               <a href="https://opensource.fb.com/" target="_blank">(Source)</a>
               <span class="tag">#technology#</span>
@@ -56,8 +55,8 @@
               <button>⛔️ <strong>4</strong></button>
             </div>
           </li>
-          <li>
-            <p class="fact">
+          <li class="fact">
+            <p>
               Millennial dads spend 3 times as much time with their kids than
               their fathers spent with them. In 1982, 43% of fathers had never
               changed a diaper. Today, that number is down to 3%
