--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
           <img src="logo.png" alt="Today I Learned Logo" />
           <h1>Today I Learned</h1>
         </div>
-        <button class="btn btn-large">Share a Fact</button>
+        <button class="btn btn-large btn-open">Share a Fact</button>
       </header>
-      <form class="fact-form">
+      <form class="fact-form hidden">
         <input type="text" placeholder="Share a fact with the world..." />
         <span>200</span>
         <input type="text" placeholder="Trustworthy source..." />
@@ -104,5 +104,6 @@
         </section>
       </main>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
